Chapter 6 - Creating MVC Applications

--- a/TicTacToe/TicTacToe.csproj
+++ b/TicTacToe/TicTacToe.csproj
@@ -25,10 +25,30 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>UserModel.resx</DependentUpon>
     </Compile>
+    <Compile Update="Localization\Views\GameInvitation.GameInvitationConfirmation.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>GameInvitation.GameInvitationConfirmation.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Localization\Views\GameInvitation.index.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>GameInvitation.Index.resx</DependentUpon>
+    </Compile>
     <Compile Update="Localization\Views\Home.Index.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Home.Index.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Localization\Views\Leaderboard.Index.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Leaderboard.Index.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Localization\Views\UserRegistration.EmailConfirmation.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>UserRegistration.EmailConfirmation.resx</DependentUpon>
     </Compile>
     <Compile Update="Localization\Views\UserRegistration.Index.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -52,12 +72,40 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>UserModel.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Views\GameInvitation.GameInvitationConfirmation.fr.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Views\GameInvitation.GameInvitationConfirmation.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>GameInvitation.GameInvitationConfirmation.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Views\GameInvitation.Index.fr.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Views\GameInvitation.Index.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>GameInvitation.Index.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="Localization\Views\Home.Index.fr.resx">
       <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Localization\Views\Home.Index.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Home.Index.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Views\Leaderboard.Index.fr.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Views\Leaderboard.Index.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Leaderboard.Index.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Views\UserRegistration.EmailConfirmation.fr.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Views\UserRegistration.EmailConfirmation.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>UserRegistration.EmailConfirmation.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="Localization\Views\UserRegistration.Index.fr.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -66,6 +114,11 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>UserRegistration.Index.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Account\Data\" />
+    <Folder Include="Areas\Account\Models\" />
   </ItemGroup>
 
 </Project>
