Chapter 8 - Accessing Data using Entity Framework Core 2

--- a/TicTacToe/appsettings.json
+++ b/TicTacToe/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TicTacToe;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Email": {
     "MailType": "SMTP",
     "MailServer": "localhost",
