--- a/TicTacToe/appsettings.json
+++ b/TicTacToe/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TicTacToe;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=sql;Database=Master;MultipleActiveResultSets=true;User id=sa;pwd=123TicTacToe!"
   },
   "Email": {
     "MailType": "SMTP",
