Chapter 11 - Managing and Supervising ASP.NET Core 2.0 Applications

--- a/TicTacToe/appsettings.json
+++ b/TicTacToe/appsettings.json
@@ -1,6 +1,8 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sql;Database=Master;MultipleActiveResultSets=true;User id=sa;pwd=123TicTacToe!"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TicTacToe;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:<YourServer>;Initial Catalog=tictactoe;Persist Security Info=False;User ID=<YourUser>;Password=<YourPassword>;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"DefaultConnection": "Server=sql;Database=Master;MultipleActiveResultSets=true;User id=sa;pwd=123TicTacToe!"
   },
   "Email": {
     "MailType": "SMTP",
@@ -21,8 +23,18 @@
       {
         "Name": "File",
         "LogLevel": "2"
+      },
+      {
+        "Name": "azureappservices"
       }
     ],
     "MinimumLevel": 1
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "<YourInstrumentationKey>"
+  },
+  "Monitoring": {
+    "MonitoringType": "azureapplicationinsights",
+    "MonitoringSettings": ""
   }
 }
